styles/_switchButton.scss
.switch--button {
  display: inline-block;
  border-radius: 50px;
  width: 60px;
  height: 26px;
  border: 1px solid;
  box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.25);
  @include theme-aware("background-color", "switch-bg");
  @include theme-aware("border-color", "switch-knob");
  position: relative;
  &:hover {
    cursor: pointer;
  }
}

.switch--button--knob {
  @include theme-aware("background-color", "switch-knob");
  height: 21px !important;
  width: 21px !important;
  border-radius: 50%;
  position: absolute;
  top: 1px;
  transition: left 0.2s ease-in-out;
  z-index: 2;

  &.left {
    left: 2px;
  }

  &.right {
    left: calc(100% - 23px);
  }
}

